# expert-service

./: CLAUDE.md  Dockerfile  README.md  architecture.json  docker-compose.yml  hatch_build.py  langgraph.json  pyproject.toml
.claude/: checkpoint.md
alembic/: env.py
entries/2026/03/06/: slack-update-mar-06.md
entries/2026/05/19/: knowledge-forge-roadmap-expert-service-absorbs-the-eem-lifecycle.md
eval/: meta_systems.py
expert_service/: __init__.py  app.py  auth.py  chunking.py  config.py  embeddings.py  mcp.py  mcp_auth.py  rbac.py
expert_service/api/: ask.py  chat.py  data.py  meta_chat.py  pipeline.py  projects.py  public.py
expert_service/chat/: agent.py  loop.py  meta_agent.py  meta_loop.py  meta_tools.py  tools.py
expert_service/connectors/: __init__.py
expert_service/core/: coverage.py  exam.py  fetch.py  propose.py  summarize.py
expert_service/db/: connection.py  models.py  schema.sql  search.py
expert_service/graphs/: assessment.py  beliefs.py  checkpointer.py  ingest.py
expert_service/llm/: provider.py
expert_service/rms/: __init__.py  api.py  pg_storage.py
expert_service/templates/: base.html  home.html
expert_service/templates/beliefs/: review.html
expert_service/templates/chat/: chat.html  meta_chat.html
expert_service/templates/entries/: view.html
expert_service/templates/projects/: create.html  detail.html  list.html
expert_service/templates/public/: index.html
expert_service/templates/reports/: view.html
scripts/: backfill_source_urls.py  build_embeddings.py  import_expert.py  import_meta_expert.py  load_reasons_db.py  manage_users.py  start.sh
tests/: conftest.py  test_ask.py  test_auth.py  test_llm_mode.py  test_search.py  test_sqlite.py
