[project]
name = "expert-service"
version = "0.1.0"
description = "Web service for building domain expert knowledge bases"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "langgraph>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-google-vertexai>=2.0",
    "anthropic[vertex]>=0.49",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "fastembed>=0.7.4",
    "pgvector>=0.3",
    "langchain>=0.3",
    "langfuse>=3.0.0",
    "ftl-reasons>=0.20.0",
]

[project.scripts]
expert-service = "expert_service.app:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["expert_service"]
